@@ -40,6 +40,9 @@ Revision history for DBIx::Class
         - Fix warning in t/54taint.t with explicitly unset PERL5LIB (RT#91972)
 
     * Misc
+        - Massive incompatible change of ::BlockRunner internals (was never
+          documented as usable externally, this last set of changes settles
+          the design for proper documentation and opening up)
         - Adjust exceptions in tests to accommodate changes in the upcoming
           DBD::SQLite based on libsqlite 3.8.2
         - Replace $row with $result in all docs to be consistent and to
